Adjust support wording.

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -73,9 +73,7 @@ Layout: false
         markdown:
           We [encourage feedback and feature requests on our UserVoice site](http://resizer.uservoice.com/forums/108373-image-resizer), where others can vote on your proposals.
 
-          For support requests, [visit our support page, which explains how to generate a diagnostics page and get free support on Stack Overflow](/support). 
-
-          We provide free support for all bug-related requests, and [**offer a $5-$100 reward** for discovering a bug (details)](/support#bugbounty). 
+          For support requests, [visit our support page, which explains how to generate a diagnostics page and get help on Stack Overflow](/support). 
 
           *Please* reserve on-page comments for questions and clarifications *related to the current page*. The comments are *not* the appropriate place to ask for support or troubleshooting assistance.
 
