--- a/content/index.slim
+++ b/content/index.slim
@@ -83,9 +83,9 @@ h1 ASP.NET library and image server
         a.block.statsbar href="https://github.com/imazen/resizer"
           p
             i.icon-white.icon-github.statsnumber  
-              |  2,300
+              |  2,550
           p
-            |Commits on Github. $5-100 bug bounty
+            |Commits on Github. 250+ myget releases.
           .clear
       .span3
         a.block.statsbar href="/support"
