--- a/content/support/contracts/compare.slim
+++ b/content/support/contracts/compare.slim
@@ -90,7 +90,7 @@ ruby:
           th Email Support
           == render_checkmarks(col, :email_support)
         tr
-          td.features-subhead Support via StackOverflow
+          td.features-subhead Community Support at StackOverflow
           == render_checkmarks(col, :so_support)
         tr
           td.features-subhead
