--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -32,7 +32,7 @@ h1 Support
       |Step 3: Make your question count.
     p
       markdown:
-        The more specific you are, the more likely it is we can diagnose your problem quickly, both on StackOverflow free support and email. **Here is what we absolutely need before we can help you.**
+        The more specific you are, the more likely your problem will be diagnosted quickly. **Here is what we absolutely need before we can help you.**
 
         #### *StackOverflow*
 
@@ -41,13 +41,13 @@ h1 Support
         3. The question is about the URL API and [follows best practices](/docs/best-practices).
         4. The question is detailed enough to answer and shows some diagnostic effort (Just "It's not working" probably won't get you the answer you need)
 
-        #### *Email support@imageresizing.net*
+        #### *Have an active support contract? Email support@imageresizing.net* 
 
         1. The [diagnostics page output](/plugins/diagnostics).
         2. If there is an error message, [the precise error message you get when you put the image URL directly into the address bar](/docs/geterror).
         3. The name of the company your support contract is registered under.
 
-        We typically answer Stack Overflow questions within 1-2 weeks. If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
+        Stack Overflow questions are usually answered within 1-2 weeks. If we take the time to provide a good answer to your question, please be courteous; mark it as the answer and vote it up. We prioritize questions from Stack Overflow users with a good reputation.
     .well
       == partial :support_times
 
