--- a/content/index.slim
+++ b/content/index.slim
@@ -10,7 +10,13 @@ h1 ASP.NET library and image server
 .container-wrap
   .container
     h1.leftzero
-     | Your server can prepare images 5,000 times faster than you.
+      | Your server can prepare images 
+      del
+        | 5,000
+      |  
+      a href="/blog/2015/v4highlights"
+        | 50,000
+      |  times faster than you.
 
     .hidden-phone
       .row-fluid style="margin-top:1em; margin-bottom:1em;"
@@ -103,7 +109,9 @@ h1 ASP.NET library and image server
           p
             strong
               | Does your business rely on ImageResizer? 
-            | Ensure you have access to support as you migrate to the new ImageResizer 4.
+            | Ensure you have access to support as you migrate to the new 
+            a href="/blog/2015/v4highlights"
+              | ImageResizer 4.
             
           p
             strong 
