Drop support contracts

--- a/content/index.slim
+++ b/content/index.slim
@@ -99,30 +99,9 @@ h1 ASP.NET library and image server
             i.icon-white.icon-calendar.statsnumber
              |  24/7
           p
-            |Support available
+            |Support available with a support contract
           .clear
-.oddhomepageitem
-  .row-fluid
-    .container
-      .span12
-        .petacdn
-          p
-            strong
-              | Does your business rely on ImageResizer? 
-            | Ensure you have access to support as you migrate to the new 
-            a href="/blog/2015/v4highlights"
-              | ImageResizer 4.
-            
-          p
-            strong 
-              | Support contracts will not be sold after Nov. 13.
-          p
-            | Community support (StackOverflow) will be your only option unless you have active support contract before this date.
-          
-        .callnow
-          p
-            a href="/support/contracts/compare"
-              | Order your 1 year support contract before Nov 13
+
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
     |Create images that impress and inspire
@@ -230,14 +209,6 @@ hr
           p.sidespace
             a href="/blog" more...
         .span4
-          .row-fluid
-            h2.sidespace
-              |Support Contracts
-            p.sidespace
-              |Need someone to call when everything breaks at 6 P.M. on Friday? We offer a variety of support contracts designed to meet every business's need, from architecture planning to hotfixes to installation support.
-            .home3
-              a href="/support/contracts" class="btn btn-primary"
-                | Support Contracts Page
           .row-fluid
             h2.sidespace
               |Imazen
