Specify support contracts are no longer sold

--- a/content/support/index.slim
+++ b/content/support/index.slim
@@ -57,7 +57,7 @@ h1 Support
       |Support Contracts
     p
       markdown:
-        There's no better way to guarantee that our product will work well for your needs than to get a support contract. Check out the **[full range of support contracts here](/support/contracts)**. We also [develop custom plugins for customers](/support/custom_plugins) with a support contract.
+        Customers who purchased a support contract before Nov 13 2015 will have access to one of these plans. Due to declining interest in .NET as a platform, we have suspended sales of new support contracts.
     a href="support/contracts/gold" 
       img src="/img/contracts/contract-hero-gold.png?width=100"
     p style= "font-size: 14pt"
