Fix broken link to apache license

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -173,13 +173,13 @@ h1 Licenses
     .span4
       markdown:
         ## Overview
-        The ImageResizer core library and [18 plugins in the Essential edition](/plugins/editions/free) are free and open-source. In version 4, they are provided under the [Apache 2 license](/licenes/apache); in v3 they are provided under [the Resizer Freedom license](/licenses/freedom). 
+        The ImageResizer core library and [18 plugins in the Essential edition](/plugins/editions/free) are free and open-source. In version 4, they are provided under the [Apache 2 license](/licenses/apache); in v3 they are provided under [the Resizer Freedom license](/licenses/freedom). 
 
-        Development of ImageResizer is funded by our commerical licenses ([Performance](/plugins/editions/performance), [Creative](/plugins/editions/creative), [Elite](/plugins/editions/elite), [OEM](/licenses/oem), and [SaaS](/licenses/saas)) and [support contracts (which include permanent licenses)](/support/contracts). All liceneses include source code and permit modification; most permit some redistribution. 
+        Development of ImageResizer is funded by our commerical licenses ([Performance](/plugins/editions/performance), [Creative](/plugins/editions/creative), [Elite](/plugins/editions/elite), [OEM](/licenses/oem), and [SaaS](/licenses/saas)) and [support contracts (which include permanent licenses)](/support/contracts). All licenses include source code and permit modification; most permit some redistribution. 
 
         All Imazen software is open-source, and your funds help (both directly, and indirectly) maintain dozens of critical low-level, permissively-licensed OSS libraries across a wide spectrum. Visit [our GitHub profile](https://github.com/imazen) to see some of the work we maintian. 
 
-        If you are able to comply with the AGPL v3 and provide the public with access to the complete source code for your website/service under any [AGPL v3](/licenses/agpl) acceptable terms (which includes MIT, GPLv3, and [Apache 2](/licenes/apache)), then you may use all ImageResizer plugins for free under the terms of the [AGPL v3](/licenses/agpl).
+        If you are able to comply with the AGPL v3 and provide the public with access to the complete source code for your website/service under any [AGPL v3](/licenses/agpl) acceptable terms (which includes MIT, GPLv3, and [Apache 2](/licenses/apache)), then you may use all ImageResizer plugins for free under the terms of the [AGPL v3](/licenses/agpl).
     .span4
       markdown:
          ## Index of licenses
