Add StackOverflow question count

--- a/content/index.slim
+++ b/content/index.slim
@@ -73,7 +73,7 @@ h1 ASP.NET library and image server
         a.block.statsbar href="http://www.nuget.org/profiles/nathanaeljones/"
           p
             i.icon-white.icon-cloud-download.statsnumber
-             |  634,000
+             |  868,000
           p
             |NuGet downloads of ImageResizer
           .clear
@@ -94,12 +94,12 @@ h1 ASP.NET library and image server
             |Commits on Github. 250+ myget releases.
           .clear
       .span3
-        a.block.statsbar href="/support"
+        a.block.statsbar href="https://stackoverflow.com/questions/tagged/imageresizer?sort=votes&pageSize=50"
           p
-            i.icon-white.icon-calendar.statsnumber
-             |  24/7
+            i.icon-white.icon-question-sign.statsnumber
+             |  370+
           p
-            |Support available with a support contract
+            | Answers on StackOverflow
           .clear
 
 .row-fluid
