Support contracts no longer available

--- a/content/support/contracts/support_page.slim
+++ b/content/support/contracts/support_page.slim
@@ -21,7 +21,10 @@ Flags: hidden
           a href="/support/contracts/gold" Gold
         li
           a href="/support/contracts/oem" OEM/SaaS
-
+.row 
+  .span12
+    .well
+      | Support Contracts are no longer available. OEM and SaaS licenses are now available separately.
 
 
     == yield
