Fix typos, clarify Azure CDN + Domain licenses.

--- a/content/licenses/index.slim
+++ b/content/licenses/index.slim
@@ -96,7 +96,7 @@ h1 Licenses
           li 
             a href="/licenses/domain"
               | 1 Wildcard domain license.
-            |  Must be a valid public-facing domain. Image requests must reach ImageResizer with a matching HOST header. An Elite license is reccomended for load-balanced, proxied, or clustered deployments of ImageResizer.
+            |  Must be a valid public-facing domain. Image requests must reach ImageResizer with a matching HOST header. An Elite license is recomended for load-balanced, proxied, or clustered deployments of ImageResizer. Azure CDN requires an Elite license, as does any CDN that uses load-balancing without custom domain names.
         .buy-buttons
           a.button1 href="https://store.imazen.io/products/imageresizer-performance-license-r4performance" class="btn btn-primary"
             strong Buy Now
