Add survey, update stats

--- a/content/index.slim
+++ b/content/index.slim
@@ -73,7 +73,7 @@ h1 ASP.NET library and image server
         a.block.statsbar href="http://www.nuget.org/profiles/nathanaeljones/"
           p
             i.icon-white.icon-cloud-download.statsnumber
-             |  868,000
+             |  1,095,000
           p
             |NuGet downloads of ImageResizer
           .clear
@@ -97,10 +97,18 @@ h1 ASP.NET library and image server
         a.block.statsbar href="https://stackoverflow.com/questions/tagged/imageresizer?sort=votes&pageSize=50"
           p
             i.icon-white.icon-question-sign.statsnumber
-             |  370+
+             |  421+
           p
             | Answers on StackOverflow
           .clear
+.row-fluid
+  .container
+    h3.home3 style="margin-top: 1em; margin-bottom: 1em"
+      | 3 clicks, if you can spare the time?
+    .span2
+    .span9
+      javascript: 
+        (function(t,e,s,c){var n,o,r;t.SMCX=t.SMCX||[],e.getElementById(c)||(n=e.getElementsByTagName(s),o=n[n.length-1],r=e.createElement(s),r.type="text/javascript",r.async=!0,r.id=c,r.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/RB3DCqzM989YSKr2UpmWlSyGsfChvkI_2BFqMUPj5RBLcY_2BPSDx_2BPZvC9Dy1mFFyNx.js"].join(""),o.parentNode.insertBefore(r,o))})(window,document,"script","smcx-sdk");
 
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
