Add imageflow links

--- a/content/_layout/footer.slim
+++ b/content/_layout/footer.slim
@@ -39,6 +39,8 @@ Layout: false
 
           Don't doom your site to inevitable instability by [using flawed code from the internet](http://nathanaeljones.com/163/20-image-resizing-pitfalls/). Our core library is compact, free, and well-tested. `Install-Package ImageResizer`.
 
+          Not on Windows? Check out [Imageflow](https://imageflow.io) for a cross-platform solution that doesn't rely on any Windows APIs. 
+
 
       .span4
         h3 We're on GitHub
@@ -46,14 +48,22 @@ Layout: false
           li: a href="https://github.com/imazen/resizer" github.com/imazen/resizer
           li: a href="https://github.com/imazen" github.com/imazen
           li: a href="https://github.com/nathanaeljones" github.com/nathanaeljones
+          li: a href="https://github.com/imazen/imageflow" github.com/imazen/imageflow
 
 
         h3 You're our sales team
         p We prefer to invest in engineering instead of advertising. 
         p 
-          | Word-of-mouth is very important; tell your friends! Blogging about ImageResizer 
+          | Word-of-mouth is very important; tell your friends! Blogging about ImageResizer or Imageflow 
           a href="/support" can earn you priority support
           | .
+        p 
+          strong 
+            | We also need your help with 
+            a href="https://imageflow.io"
+              | Imageflow
+            | ; Share the Kickstarter and be a part of making ImageResizer 5 possible.
+
         h4 Last and least, the requisite cliché sharing icons:
 
 
