--- a/content/index.slim
+++ b/content/index.slim
@@ -104,7 +104,13 @@ h1 ASP.NET library and image server
 .row-fluid
   .container
     h3.home3 style="margin-top: 1em; margin-bottom: 1em"
-      | 3 clicks, if you can spare the time?
+      | Please support our upcoming Kickstarter for 
+      a href="https://imageflow.io"
+        | Imageflow
+    p style="text-align:center;"
+      | Imageflow provides a cross-platform imaging library that will enable ImageResizer to work on Core CLR and all platforms.
+    h3.home3 style="margin-top: 1em; margin-bottom: 1em"
+      | A 4 click survery, if you can spare the time?
     .span2
     .span9
       javascript: 
