Link to Kickstarter

--- a/content/index.slim
+++ b/content/index.slim
@@ -10,6 +10,11 @@ h1 ASP.NET library and image server
 .container-wrap
   .container
     h1.leftzero
+      a href="https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image"
+        | Support our Kickstarter
+      |  and make ImageResizer 5 possible.
+    hr
+    h1.leftzero
       | Your server can prepare images 
       del
         | 5,000
@@ -101,20 +106,7 @@ h1 ASP.NET library and image server
           p
             | Answers on StackOverflow
           .clear
-.row-fluid
-  .container
-    h3.home3 style="margin-top: 1em; margin-bottom: 1em"
-      | Please support our upcoming Kickstarter for 
-      a href="https://imageflow.io"
-        | Imageflow
-    p style="text-align:center;"
-      | Imageflow provides a cross-platform imaging library that will enable ImageResizer to work on Core CLR and all platforms.
-    h3.home3 style="margin-top: 1em; margin-bottom: 1em"
-      | A 4 click survery, if you can spare the time?
-    .span2
-    .span9
-      javascript: 
-        (function(t,e,s,c){var n,o,r;t.SMCX=t.SMCX||[],e.getElementById(c)||(n=e.getElementsByTagName(s),o=n[n.length-1],r=e.createElement(s),r.type="text/javascript",r.async=!0,r.id=c,r.src=["https:"===location.protocol?"https://":"http://","widget.surveymonkey.com/collect/website/js/RB3DCqzM989YSKr2UpmWlSyGsfChvkI_2BFqMUPj5RBLcY_2BPSDx_2BPZvC9Dy1mFFyNx.js"].join(""),o.parentNode.insertBefore(r,o))})(window,document,"script","smcx-sdk");
+    
 
 .row-fluid
   h1.home3 style="padding-top: 25px; padding-bottom: 30px"
