Fix signup form

--- a/content/download.slim
+++ b/content/download.slim
@@ -82,8 +82,7 @@ h1 Download ImageResizer
       strong Extremely low-volume.
 
   p
-    form#signupform.form-inline method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" onsubmit="return verifyRequired('signupform');"
-      input type="hidden" name="redirect" value="http://imageresizing.net/newsletter/thankyou"
+    form#signupform.form-inline method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8"
       input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
       | Email: 
       input type="text" name="email" placeholder="name@domain.com"
