--- a/content/newsletter/signup.slim
+++ b/content/newsletter/signup.slim
@@ -15,9 +15,7 @@ markdown:
 
   You can unsubscribe at any time.
 
-
-form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" onsubmit="return verifyRequired('signupform');"
-  input type="hidden" name="redirect" value="http://imageresizing.net/newsletter/thankyou"
+form#signupform method="post" action="http://news.imazen.io/subscribe" accept-charset="UTF-8" 
   input type="hidden" name="list" value="9qAaYaDsCOem6WVY7jWnhA"
   h3 style="margin-bottom:0"
     | Notify me when important updates are available
