--- a/content/index.slim
+++ b/content/index.slim
@@ -54,7 +54,7 @@ h1 ASP.NET library and image server
           |  
           img src="https://img.shields.io/badge/rendering engine-custom-green.svg"
         markdown: 
-          | We expect a usable beta of [libimageflow and imageflow-server](https://www.imageflow.io) around September 2016, with a stable release the following year. [Imageflow](https://www.imageflow.io) makes a [cross-platform ImageResizer 5 possible](http://www.imageflow.io/imageresizer/). If you have [backed Imageflow on Kickstarter](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image), you can already [access a limited command-line version of the tool](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image/posts/1598662). 
+          We expect a usable beta of [libimageflow and imageflow-server](https://www.imageflow.io) around September 2016, with a stable release the following year. [Imageflow](https://www.imageflow.io) makes a [cross-platform ImageResizer 5 possible](http://www.imageflow.io/imageresizer/). If you have [backed Imageflow on Kickstarter](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image), you can already [access a limited command-line version of the tool](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image/posts/1598662). 
 
       .span6 style="text-align:center;"
         p 
