Fix broken button link, improve support contract info

--- a/content/index.slim
+++ b/content/index.slim
@@ -93,10 +93,9 @@ h1 ASP.NET library and image server
     .row-fluid
       .span12 style="text-align:center;"
           h2 style="color:black; font-style:bold;"
-            a href="https://www.imageflow.io/resizer_support" style="color:black"
-              | Support contracts for both are available
-              |  exclusively via the Kickstarter
-            |  – don't wait!
+            | Want an ImageResizer support contract? 
+            a href="mailto:support@imageresizing.net" 
+              | Email us by June 27th!
 hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom: 1px solid #e3e3e3;"
 .container-wrap
   .container
@@ -154,7 +153,7 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
 
     .home3
       
-      a href="https://imageflow.io/ks" class="btn btn-buynow" style="margin:6px"
+      a href="https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image" class="btn btn-buynow" style="margin:6px"
         | Pre-order Imageflow now and save!
       a href="/download" class="btn btn-buynow" style="margin:6px"
         | Download ImageResizer for Windows Server
@@ -162,6 +161,9 @@ hr style="margin:0; margin-top:5px; border-top: 1px solid #e3e3e3; border-bottom
         Imageflow discounts will not be available after June 27th, when [the Imageflow Kickstarter ends](https://www.kickstarter.com/projects/njones/imageflow-respect-the-pixels-a-secure-alt-to-image).
 
         Read [more about ImageResizer vs Imageflow here](http://www.imageflow.io/imageresizer/).
+
+        Or [about ImageResizer support contracts (available through June 27th)](http://www.imageflow.io/imageresizer/).
+
 
 
 
